--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<div id="box"> 1440x1080 is best rez </div>
+<div id="box"> 1440x1080 is best rez fr </div>
 
 <script src="script.js"> </script>
 
