Bugatti is better than ferrari

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
 <div id="box"> 1440x1080 is best rez fr </div>
 
+<ol> 
+
+    Buggati > Lambo 
+    Mclaren > Ferrari 
+    
+</ol>
+
 <script src="script.js"> </script>
 
 </body>
