--- a/Guessing game/index.html
+++ b/Guessing game/index.html
@@ -15,6 +15,34 @@
 <input type="number" id="guess">
 <div id="feedback">Make a Guess...</div>
     
+
+<h2> Number Square </h2>
+
+
+<input type="number" id="square">
+
+<div id="output1"> </div>
+
+
+<h2> 4th </h2>
+
+<input type="number" id="input">
+
+<select id="functionSelector"> <option value="square">square</option> <option value="double">double</option> <option value="2x+7">2x + 7</option> <option value="cube">cube</option> </select>
+
+
+<div id="output">  </div>
+
+
+
+
+
+
+
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
